# sintesi

./: .env.example  .eslintrc.js  .gitignore  .npmignore  .prettierignore  CLAUDE.md  LICENSE  PHASE3.md  README.md  README.md.backup  doctype-map.json  doctype.config.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-load.js  tsconfig.json  vercel.json  vitest.config.ts
.changeset/: all-memes-like.md  beige-poems-send.md  brave-whales-listen.md  bright-birds-sing.md  bright-clouds-walk.md  calm-sharks-smile.md  clever-clouds-jump.md  config.json  cool-bears-eat.md  cool-dolphins-run.md  cool-eagles-play.md  dull-feet-tease.md  fair-whales-run.md  fancy-dolphins-jump.md  fancy-hawks-fly.md  fancy-moons-jump.md  fancy-pandas-jump.md  fast-cups-allow.md  fix-fs-error-native-loader.md  gentle-suns-talk.md  late-llamas-thank.md  legal-monkeys-retire.md  loose-jokes-knock.md  lucky-beds-argue.md  many-teeth-exist.md  nice-tables-pull.md  old-rivers-smile.md  old-sharks-swim.md  old-tigers-eat.md  proud-fish-dance.md  quiet-owls-listen.md  quiet-trees-play.md  release-0-3-28.md  rust-markdown-extractor.md  salty-swans-know.md  shaggy-deer-learn.md  shaggy-islands-guess.md  short-melons-cry.md  shy-mice-wait.md  slow-stars-fly.md  (+8 more)
.github/workflows/: ci.yml  doctype-check.yml  doctype.yml  manual-release-native.yml  pr-evaluation.yml  publish.yml  release.yml  sintesi.yml
.sintesi/: lineage.json  state.json
crates/core/: Cargo.toml  README.md  build.rs  example.js  package-lock.json  package.json
crates/core/npm/: README.md
crates/core/npm/darwin-arm64/: index.js  package.json
crates/core/npm/linux-x64-gnu/: index.js  package.json
crates/core/npm/win32-x64-msvc/: index.js  package.json
crates/core/scripts/: sync-version.js
crates/core/src/: ast.rs  discovery.rs  drift.rs  error.rs  graph.rs  lib.rs  search.rs  signature.rs  types.rs
crates/core/src/ast/: analyzer.rs  drift.rs  hasher.rs  mod.rs
crates/core/src/content/: discovery.rs  extractor.rs  mod.rs  types.rs
crates/core/src/genai/: mod.rs
crates/core/src/git/: analyzer.rs  mod.rs
crates/core/src/napi/: ast.rs  content.rs  git.rs  graph.rs  mod.rs  search.rs  semantic.rs  utils.rs
crates/core/src/semantic/: mod.rs
docs/: API.md  CONTRIBUTING.md  PHASE2.md  api.md  commands.md  configuration.md  index.md  installation.md  troubleshooting.md  usage.md
docs/.vitepress/: config.mts
docs/api/: ast-analyzer.md  content-injector.md  map-manager.md  markdown-parser.md  signature-hasher.md
docs/architecture/: ai-architecture.md  architecture.md
docs/cli/: check.md  fix.md
docs/community/: contributing.md  roadmap.md
docs/concepts/: architecture.md  rag.md
docs/developer/: build-and-test.md  dev-setup.md
docs/guide/: ai-tools.md  configuration.md  core-concepts.md  documentation-planner.md  (+7 more)
scripts/: generate-map.ts  init-hashes.ts
src/rust-core/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
src/rust-core/src/: ast_analyzer.rs  lib.rs
(+51 files in other folders)
