[package]
name = "doctype-core"
version = "0.1.0"
edition = "2021"
authors = ["doctypedev"]
description = "Core Rust implementation for Doctype - AST analysis and signature hashing"
license = "MIT"
repository = "https://github.com/doctypedev/doctype"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs for Node.js bindings
napi = { version = "2", features = ["async"] }
napi-derive = "2"

# Future dependencies:
serde = { version = "1.0", features = ["derive"] }
# sha2 = "0.10"
# tree-sitter = "0.20"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
