[package]
name = "doctype-core"
version = "0.1.0"
edition = "2021"
authors = ["doctypedev"]
description = "Core Rust implementation for Doctype - AST analysis and signature hashing"
license = "MIT"
repository = "https://github.com/doctypedev/doctype"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs for Node.js bindings
napi = { version = "2", features = ["async"] }
napi-derive = "2"

# Core dependencies
ignore = "0.4.25"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
pulldown-cmark = "0.12"
regex = "1"

# Oxc for TypeScript/JavaScript AST parsing
oxc_parser = "0.39"
oxc_ast = "0.39"
oxc_span = "0.39"
oxc_allocator = "0.39"
oxc_semantic = "0.39"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
